maybe sidebar overlap resolved

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,7 +4,7 @@
 
 .page__footer {
   @include clearfix;
-  float: left;
+  float: right;
   margin-left: 0;
   margin-right: 0;
   width: 100%;
