--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -115,7 +115,6 @@ $medium                     : 768px !default;
 $medium-wide                : 900px !default;
 $large                      : 925px !default;
 $x-large                    : 1280px !default;
-$max-width                  : $x-large !default;
 
 /*
    Grid
